# 24JanPowerWorkshop

./: .env.example  README.md  async_things.py  main.py  notebook_tryout.ipynb  pyproject.toml  some.txt  tools.py  utils.py
